add deploeyr js

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "build:prod": "ng build --prod --aot",
+    "deploy": "ng build --prod --aot && node deployer",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -23,9 +24,14 @@
     "@angular/platform-browser-dynamic": "~9.1.3",
     "@angular/router": "~9.1.3",
     "@mapbox/mapbox-gl-directions": "^4.1.0",
+    "@pinata/sdk": "^1.1.11",
     "@types/lodash": "^4.14.152",
     "@types/mapbox-gl": "^1.11.2",
+    "cids": "^1.0.2",
     "core-js": "^2.5.4",
+    "ipfs": "^0.50.2",
+    "ipfs-http-client": "^47.0.1",
+    "it-all": "^1.0.4",
     "lodash": "^4.17.15",
     "mapbox-gl": "^1.12.0",
     "moment": "^2.26.0",
@@ -43,6 +49,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/mapbox-gl": "^1.11.2",
     "@types/node": "^12.11.1",
+    "axios": "^0.20.0",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
